@@ -345,4 +345,12 @@ $translations = array(
 	'Type has been dropped.' => 'Typ byl odstraněn.',
 	'Type has been created.' => 'Typ byl vytvořen.',
 	'Alter type' => 'Pozměnit typ',
+
+	// MySQL check constraints
+	'Checks' => 'Kontroly',
+	'Create check' => 'Vytvořit kontrolu',
+	'Alter check' => 'Změnit kontrolu',
+	'Check has been created.' => 'Kontrola byla vytvořena.',
+	'Check has been altered.' => 'Kontrola byla změněna.',
+	'Check has been dropped.' => 'Kontrola byla odstraněna.',
 );
