@@ -345,4 +345,12 @@ $translations = array(
 	'Type has been dropped.' => 'Xx.',
 	'Type has been created.' => 'Xx.',
 	'Alter type' => 'Xx',
+
+	// MySQL check constraints
+	'Checks' => 'Xx',
+	'Create check' => 'Xx',
+	'Alter check' => 'Xx',
+	'Check has been created.' => 'Xx.',
+	'Check has been altered.' => 'Xx.',
+	'Check has been dropped.' => 'Xx.',
 );
